@@ -1,3 +1,4 @@
-/items/
 /genTest/
+/items/
+/tiles/
 /levels/
