@@ -2,9 +2,14 @@ package genTest;
 
 public interface GameSettings {
 	
-	final static int WIDTH = 1296;
-	final static int HEIGHT = 720;
-	final static int TILESIZE = 48;
+//	final static int WIDTH = 1296;
+//	final static int HEIGHT = 720;
+//	final static int TILESIZE = 48;
+	
+	final static int WIDTH = 1280;
+	final static int HEIGHT = 768;
+	final static int TILESIZE = 64;
+	
 	
 	
 }
