@@ -8,7 +8,8 @@ import genTest.Pair;
 public class Key extends ItemImpl{
 	
 	public Key(final Pair<Integer, Integer> coord) throws SlickException {
-		super(new Image("./res/key.png"), coord);
+		super(new Image("./res/chars/mainChar4.png"), coord);
+//		super(new Image("./res/chars/mainChar2.png"), coord);
 	}
 
 }
