@@ -6,7 +6,7 @@ import org.newdawn.slick.SlickException;
 public class Corner1 extends Tile {
 
 	public Corner1() throws SlickException {
-		super(new Image("./res/wall_inner_corner_1.png"));
+		super(new Image("./res/walls/wall_inner_corner_1.png"));
 	}
 
 }
