@@ -6,6 +6,6 @@ import org.newdawn.slick.SlickException;
 public class WallHor1 extends Tile {
 
 	public WallHor1() throws SlickException {
-		super(new Image("./res/wall_inner_down_1.png"));
+		super(new Image("./res/walls/wall_inner_down_1.png"));
 	}
 }
