@@ -6,6 +6,6 @@ import org.newdawn.slick.SlickException;
 public class WallVert1 extends Tile {
 	
 	public WallVert1() throws SlickException {
-		super(new Image("./res/wall_inner_left_1.png"));
+		super(new Image("./res/walls/wall_inner_left_1.png"));
 	}
 }
